# casas-pbdm-olive

./: README.md  pyproject.toml  requirements.txt
olive_model/components/animals/olive_fly/: olive_fly.json
olive_model/components/interactions/: supply-demand.json
