[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "casas_pbdm_olive"
authors = [
    {name = "George Simmons", email = "g.simmons@idems.international"},
    {name = "Georg Osang", email = "gosang@idems.international"},
]
description = "CASAS PBDM Models"
readme = "README.md"
dependencies = [
    "casas-pbdm"
]
requires-python = ">=3.9"
#keywords = ["one", "two"]
#license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
#version = "0.0.3"

[tool.setuptools_scm]